--- a/Supermercado/templates/clienteRegistrar.html
+++ b/Supermercado/templates/clienteRegistrar.html
@@ -26,15 +26,15 @@
 
         <div class="barraNav pe-3">
             <div class="text1 me-3">Bienvenido usuario: {{request.session.user}} </div>
-            <a href="../"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
-            <a href="../MenuAdmin/"><button  class="btn rounded-pill btn-outline-warning" type="button">Menú</button></a>
+            <a href="{% url 'index' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
+            <a href="{% url 'MenuAdmin' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Menú</button></a>
             <a href="{% url 'cerrar' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
         </div>
 
     <!--formulario de registro-->
         <div class="container mt-5 col-7 align-center">
             <div class="container text-center text-success"><h2>REGISTRAR CLIENTE</h2></div>
-            <form action="../RegistrarCliente/" method="post">
+            <form action="{% url 'RegistrarCliente' %}" method="post">
                 {% csrf_token %}
                 <div class="form-floating mb-3">
                     <input type="text" class="form-control" id="usuario" name="usuario" required placeholder="Usuario">
@@ -69,7 +69,7 @@
                     <label for="editorial" class="form-label">Usuario Admin</label>
                 </div>   
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4">
-                    <a href="../ListaClientes/"><button class="btn btn-outline-primary rounded-pill" type="button">Volver</button></a>
+                    <a href="{% url 'ListaClientes' %}"><button class="btn btn-outline-primary rounded-pill" type="button">Volver</button></a>
                     <button class="btn btn-outline-success rounded-pill" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Registrar</button>      
                 </div>
             
