--- a/Supermercado/templates/menuAdmin.html
+++ b/Supermercado/templates/menuAdmin.html
@@ -75,7 +75,7 @@
                 <div class="col-4 d-grid gap-2 d-md-flex align-items-center justify-content-md-start m-0 p-0">
                     <div class="card  border border-success" style="width: 20rem;">
                         <img src="{% static 'img/productos.png' %}" class="rounded" alt="...">
-                        <a href="#" class="btn btn-outline-success">PRODUCTOS</a>
+                        <a href="{% url 'ListaProductos' %}" class="btn btn-outline-success">PRODUCTOS</a>
                     </div>
                 </div>
             </div>
