--- a/Supermercado/templates/menuEmpleado.html
+++ b/Supermercado/templates/menuEmpleado.html
@@ -43,7 +43,7 @@
                 <div class="col-6 d-grid gap-2 d-md-flex align-items-center justify-content-md-start m-0 ps-5">
                     <div class="card  border border-success" style="width: 20rem;">
                         <img src="{% static 'img/productos.png' %}" class="rounded" alt="...">
-                        <a href="#" class="btn btn-outline-success">PRODUCTOS</a>
+                        <a href="{% url 'ListaProductos' %}" class="btn btn-outline-success">PRODUCTOS</a>
                     </div>
                 </div>
             </div>
