--- a/Supermercado/templates/productoEditar.html
+++ b/Supermercado/templates/productoEditar.html
@@ -10,9 +10,10 @@
     
     <link rel="stylesheet" href="{% static 'css/styleCabecera.css' %}" type="text/css"> 
     
-    <title>Registro egreso</title>
+    <title>Actualizar producto</title>
 </head>
 <body>
+    <!--Cabecera de la página-->
     <header class="contheader">
         <div class="d-flex align-items-center justify-content-md-start" style="background-color: #003301f4;" height="100">
             <!-- LOGO IZQUIERDA -->
@@ -27,7 +28,7 @@
     <div class="barraNav pe-3">
         <div class="text1 me-3">Bienvenido usuario: {{request.session.user}} </div>
         <a href="{% url 'index' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Inicio</button></a>
-        
+
         {%if request.session.superusu%}
         <a href="{% url 'MenuAdmin' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Menú</button></a>
         {%elif request.session.emple%}
@@ -39,31 +40,36 @@
         <a href="{% url 'cerrar' %}"><button  class="btn rounded-pill btn-outline-warning" type="button">Cerrar sesión</button></a>
     </div>
 
-<!--formulario de registro-->
+<!--formulario de Actualización-->
     <div class="container mt-5 col-7 align-center">
-        <div class="container text-center text-success"><h2>REGISTRAR EGRESO</h2></div>
-        <form action="{% url 'RegistrarEgreso' %}" method="post">
+        <div class="container text-center text-success"><h2>ACTUALIZAR PRODUCTO</h2></div>
+        <form action="{% url 'ActualizarProducto' %}" method="post">
             {% csrf_token %}
+            {% for pro in productos %}
             <div class="form-floating mb-3">
-                <select class="form-select" name="NIT_empresa" aria-label="Default select example" required>
-                    {% for empre in empresas %}    
-                    <option value="{{empre.EM_NIT}}">{{empre.EM_NIT}} - {{empre.EM_IDName}}</option>
-                    {% endfor %}
-                </select>
-                <label for="NIT_empresa" class="form-label">NIT Empresa</label>
-            </div>  
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="EGR_Name" name="EGR_Name" required placeholder="Concepto del egreso">
-                <label for="EGR_Name" class="form-label">Concepto del egreso</label>
+                <input type="number" class="form-control" id="codigo" name="codigo" value="{{pro.PRO_Code}}" required placeholder="ID Producto" readonly>
+                <label for="codigo" class="form-label">ID Producto</label>
             </div>
             <div class="form-floating mb-3">
-                <input type="number" class="form-control" id="EGR_Total" name="EGR_Total" required placeholder="Total">
-                <label for="EGR_Total" class="form-label">Total</label>
+                <input type="text" class="form-control" id="PRO_Name" name="PRO_Name" value="{{pro.PRO_Name}}" required placeholder="Nombre producto">
+                <label for="PRO_Name" class="form-label">Nombre producto</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="PRO_Description" name="PRO_Description" value="{{pro.PRO_Description}}" required placeholder="Descripción producto">
+                <label for="PRO_Description" class="form-label">Descripción producto</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="number" class="form-control" id="PRO_Cost" name="PRO_Cost" value="{{pro.PRO_Cost}}" required placeholder="Costo del producto">
+                <label for="PRO_Cost" class="form-label">Costo del producto</label>
+            </div>
+            <div class="form-floating mb-3">
+                <input type="number" class="form-control" id="PRO_Stock" name="PRO_Stock" value="{{pro.PRO_Stock}}" required placeholder="Stock">
+                <label for="PRO_Stock" class="form-label">Stock</label>
             </div>
 
             <div class="d-grid gap-2 d-md-flex justify-content-md-center mb-4">
-                <a href="{% url 'ListaEgresos' %}"><button class="btn btn-outline-primary rounded-pill" type="button">Volver</button></a>
-               <button class="btn btn-outline-success rounded-pill" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Registrar</button>      
+               <a href="{% url 'ListaProductos'%}"><button class="btn btn-outline-primary rounded-pill" type="button">Volver</button></a>
+               <button class="btn btn-outline-success rounded-pill" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Actualizar</button>
             </div>
         
                      <!-- Modal  hace referencia a una ventana emergente para dar la opción de confirmar-->
@@ -71,10 +77,10 @@
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                      <div class="modal-header">
-                          <h5 class="modal-title" id="staticBackdropLabel">Registrar egreso</h5>
+                          <h5 class="modal-title" id="staticBackdropLabel">Actualizar producto</h5>
                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">Presione "Confirmar" para registrar este nuevo egreso.</div>
+                        <div class="modal-body">Presione "Confirmar" para actualizar la información del producto.</div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary rounded-pill" data-bs-dismiss="modal">Cerrar</button>
                             <button type="submit" class="btn btn-primary rounded-pill">Confirmar</button>
@@ -82,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            
+            {%endfor%} 
         </form>
     </div>   
 </body>
