--- a/Supermercado/templates/productos.html
+++ b/Supermercado/templates/productos.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/styleCabecera.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/styleCliente.css' %}" type="text/css">
 
-    <title>Ingresos</title>
+    <title>Productos</title>
 </head>
 <body>
     <header class="contheader">
@@ -43,9 +43,9 @@
 
 
     <div class="tabla">        
-        <div class="text-center fs-1 fw-bold mb-5">Ingresos</div>
+        <div class="text-center fs-1 fw-bold mb-5">Productos</div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-            <form class="row g-3" action="{% url 'BuscarIngreso' %}" method="post">
+            <form class="row g-3" action="{% url 'BuscarProducto' %}" method="post">
                 {% csrf_token %}
                 <div class="col-auto">
                     <input class="form-control" type="text" name="codigo" required placeholder="Código">                  
@@ -54,10 +54,10 @@
                     <button type="submit" class="btn rounded-pill btn-outline-primary">Buscar</button>
                 </div>
             </form>
-            <a href="{% url 'ListaIngresos' %}">   
+            <a href="{% url 'ListaProductos' %}">   
                 <button class="btn rounded-pill btn-outline-primary" type="button">Todos</button>
             </a>
-            <a href="{% url 'FormIngreso' %}">   
+            <a href="{% url 'FormProducto' %}">   
                 <button class="btn rounded-pill btn-outline-success" type="button">Agregar</button>
             </a> 
         </div>
@@ -78,28 +78,24 @@
             <thead>
                 <tr align="center">
                     <th scope="col-auto">CODIGO</th>
-                    <th scope="col-auto">EMPRESA</th>
-                    <th scope="col-auto">EMPLEADO</th>
-                    <th scope="col-auto">PRODUCTO</th>
-                    <th scope="col-auto">FECHA</th>
-                    <th scope="col-auto">CANTIDAD</th>
-                    <th scope="col-auto">TOTAL</th>
+                    <th scope="col-auto">NOMBRE</th>
+                    <th scope="col-auto">DESCRIPCION</th>
+                    <th scope="col-auto">COSTO</th>
+                    <th scope="col-auto">STOCK</th>
                     <th>Editar</th>
                     <th>Eliminar</th>
                 </tr>
             </thead>
             <tbody>              
-                {% for ing in ingresos%}
+                {% for pro in productos%}
                 <tr scope="row">
-                    <td align="center">{{ing.ING_Code}}</td>
-                    <td>{{ing.ING_EM_NIT_id}}</td>
-                    <td>{{ing.ING_EMP_User_id}}</td>
-                    <td>{{ing.ING_PRO_Code_id}}</td>
-                    <td align="center">{{ing.ING_Fecha}}</td>
-                    <td align="center">{{ing.ING_Quantity}}</td>
-                    <td align="center">$ {{ing.ING_Total}}</td>
-                    <td align="center"><a href="{% url 'FormEditarIngreso' ing.ING_Code %}"><button type="button" class="btn rounded-pill btn-outline-warning">Editar</button></a></td>
-                    <td align="center"><a href="{% url 'EliminarIngreso' ing.ING_Code %}"><button type="button" class="btn rounded-pill btn-outline-danger">Eliminar</button></a></td>                           
+                    <td align="center">{{pro.PRO_Code}}</td>
+                    <td>{{pro.PRO_Name}}</td>
+                    <td>{{pro.PRO_Description}}</td>
+                    <td align="center">$ {{pro.PRO_Cost}}</td>
+                    <td align="center">{{pro.PRO_Stock}}</td>
+                    <td align="center"><a href="{% url 'FormEditarProducto' pro.PRO_Code %}"><button type="button" class="btn rounded-pill btn-outline-warning">Editar</button></a></td>
+                    <td align="center"><a href="{% url 'EliminarProducto' pro.PRO_Code %}"><button type="button" class="btn rounded-pill btn-outline-danger">Eliminar</button></a></td>                           
                 </tr>                
                 {% endfor%}
                 </tbody>         
