--- a/Supermercado/templates/productos.html
+++ b/Supermercado/templates/productos.html
@@ -62,6 +62,14 @@
             </a> 
         </div>
 
+        {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} mt-3" role="alert">
+                    {{ message }}
+                </div>
+                {% endfor %}
+        {% endif %}
+
         {% if Mensaje%}
             <div class="alert alert-success mt-3" role="alert">
                 {{Mensaje}}
