--- a/Supermercado/templates/Empleados.html
+++ b/Supermercado/templates/Empleados.html
@@ -87,7 +87,7 @@
                         <button type="button" class="btn btn-outline-danger">Eliminar</button></td></a>
                     
                     <td>
-                        <a href="../EditarFormularioAgregarEmpleado/">
+                        <a href="{% url 'Carfor' emple.EMP_USER %}">
                         <button type="button" class="btn btn-outline-warning">Editar</button></td></a>
                 </tr>
                 {%endfor%}
