--- a/Supermercado/templates/EditarFormularioEmpleado.html
+++ b/Supermercado/templates/EditarFormularioEmpleado.html
@@ -12,43 +12,39 @@
     <div class="container mt-5 ">
         <div class="container text-center"><h2 class="text-success">Atributos Empleado  </h2></div>
     
-        <form action="../EditarFormularioAgregarEmpleado1/" method="post">
+        <form action="{% url 'Editar' %}" method="post">
+            
             {% csrf_token %}
+            {% for emple in empleados%}
             <div class="mb-3">
             <label for="IdUsuario" class="form-label">Usuario</label>
-            <input type="text" class="form-control" id="IdUsuario" disabled name="IdUsuario">
+            <input type="text" class="form-control" id="IdUsuario" readonly  name="IdUsuario" value="{{emple.EMP_USER}}">
             <div class="valid-feedback">
             ¡Se ve bien!
             </div>
             </div>
             <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" name="exampleInputPassword1">
+            <input type="password" class="form-control" id="exampleInputPassword1" name="exampleInputPassword1" value="{{emple.EMP_PASSWORD}}">
             <div id="exampleInputPassword1Help" class="form-text">No comparta su contraseña.</div>
             </div>
             <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Correo electrónico</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1" aria-describedby="emailHelp" required placeholder="Ej: Carlos@gmail.com.co">
+            <input type="email" class="form-control" id="exampleInputEmail1" name="exampleInputEmail1"  value="{{emple.EMP_EMAIL}}" aria-describedby="emailHelp" required placeholder="Ej: Carlos@gmail.com.co">
             </div>
             <div class="mb-3">
             <label for="Nombre" class="form-label">Nombres</label>
-            <input type="text" class="form-control" id="Nombre" name="Nombre" required placeholder="Ej: Carlos">
+            <input type="text" class="form-control" id="Nombre" name="Nombre" value="{{emple.EMP_NAMES}}" required placeholder="Ej: Carlos">
             </div>
             <div class="mb-3">
             <label for="Apellidos" class="form-label">Apellidos</label>
-            <input type="text" class="form-control" id="Apellidos" name="Apellidos" required placeholder="Ej: Medina">
+            <input type="text" class="form-control" id="Apellidos" name="Apellidos" value="{{emple.EMP_LASTNAMES}}" required placeholder="Ej: Medina">
             </div>
             <div class="mb-3">
             <label for="Teléfono" class="form-label">Telefono</label>
-            <input type="number" class="form-control" id="Telefono" name="Telefono" required placeholder="Ej: 3138479457">
+            <input type="number" class="form-control" id="Telefono" name="Telefono" value="{{emple.EMP_CELLPHONE}}" required placeholder="Ej: 3138479457">
             </div>
-            <div class="mb-3">
-                <select class="form-select " name="Empresa" aria-label="Default select example">
-                    {% for e in empresas%}
-                    <option value ="{{e.EM_NIT}}" >{{e.EM_NIT}} - {{e.EM_IDName}}</option>
-                    {%endfor%} 
-                </select>
-            </div>
+            
             <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                 <a href="../ListaDeEmpleados/">
                     <button type="button" class="btn btn-outline-danger">Cancelar</button></a>
@@ -72,7 +68,7 @@
                     </div>
                 </div>
               
-
+         {%endfor%}
         </form>
         </div>
 
